# crcl

./: .gitignore  .markdownlint.json  .markdownlintignore  AGENTS.md  Cargo.toml  README.md  package-lock.json  package.json
.beads/: issues.jsonl  metadata.json
.codex/agents/: README.md  crcl-autoresearch-curator.toml  crcl-competition-score.toml  crcl-data-collector.toml  crcl-data-quality-auditor.toml  crcl-financial-valuation.toml  crcl-monitor-guard.toml  crcl-platform-option.toml  crcl-regulatory-watch.toml  crcl-risk-decision.toml  crcl-source-verifier.toml  crcl-spot-venue-watch.toml  crcl-total-analysis.toml
.omc/: project-memory.json
.omc/state/: hud-stdin-cache.json  last-tool-error.json
docs/: README.md  sources.md
docs/archive/: 1.md  11.md  111.md
docs/autoresearch/: 00-loop.md  01-iteration-log.md
docs/framework/: 00-research-map.md  01-business-model.md  02-regulation.md  03-competition.md  04-platform-option.md
docs/metrics/: 00-metric-dictionary.md  01-daily-watchlist.md  02-weekly-review.md  03-quarterly-earnings.md  04-competition-dashboard.md  05-competition-scoring-rubric.md  06-validation-matrix.md  07-q1-2026-earnings-preview.md
docs/playbook/: 00-research-routine.md  01-decision-template.md  02-competition-review.md
docs/risk/: 00-risk-map.md  01-warning-signals.md  02-failure-conditions.md
docs/valuation/: 00-valuation-framework.md  01-scenario-model.md
src/: agent_runner.rs  collectors.rs  cron_runner.rs  db.rs  full_analysis.rs  main.rs  models.rs  parsing.rs  workflows.rs
work_docs/: data-collector-coverage.md  data-source-inventory.md  subagent-decision-workflows.md  使用提示.md
(+126 files in other folders)
